# DuplicateFileFinder

./: CMakeLists.txt  README.md  build_app.bat  build_app.sh
app/: CMakeLists.txt  DuplicateFileFinderApp.cpp  DuplicateFileFinderApp.h  main.cpp
src/: CMakeLists.txt  Utils.cpp  Utils.h
